[package]
name = "hypernova-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.29", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
eyre = "0.6"
tokio-stream = "0.1"
futures-util = "0.3"
hex = "0.4.3"
